--- a/Week 1/Day 5/Portefolioproject/index.html
+++ b/Week 1/Day 5/Portefolioproject/index.html
@@ -39,10 +39,10 @@
 
  <header>
 <div class="card bg-light text-white">
-  <img src="headerback.jpg" class="card-img" alt="school">
-  <div class="card-img-overlay" style="text-align:center; margin-top: 21%;color:black">
+  <img src="background.jpg" class="card-img" alt="school">
+  <div class="card-img-overlay" style="text-align:left; margin-top: 33%;color:black">
     <h1 class="card-title">HELLO, WELCOME TO MY OFFICIAL WEBSITE</h1>
-    <h5 class="card-text">Here you will find everything about my professional work</h5>
+    <h5 class="card-text">I'm <B>Clarice DJOUWOUG NOUSSI.</B> Here you will find everything about my professional work</h5>
   
 </div>
 </div>
@@ -60,9 +60,7 @@
       <img src="moi.jpg" width=300px; height=400px>
     </div>
       <div class="col col-7" style="border-left:3px solid #18c3da">
-        <p class ="pt-5 fs-4"><b>Clarice DJOUWOUG NOUSSI</b> is a Full Stack Developer experienced in Python and JavaScript based programming with a
-          background in Biology. Possess strong skills in HTML, CSS, JavaScript, DOM and Python that could be an advantage in ITcompanies specialized in biological tools. My qualities are determination, creativity, continuous learner, resilience, good
-          team worker</p>
+        <p class ="pt-5 fs-4"><b>Clarice DJOUWOUG NOUSSI</b> Clarice DJOUWOUG NOUSSI is a PhD candidate in biology precisely in physiology   where I acquired many skills related physiology of many fupreclinical studies of medicinal plants in vitro and in vivo. Afterward I had a sudden desire to integrate the world of computional biology so, I registered for a python training bootcamp in order to get basis in programmation.  My qualities are determination, creativity, continuous learner, resilience and good team worker</p>
       </div>
     </div>
   </section>
@@ -73,10 +71,19 @@
       <div class="col my-5 mb-1">
     <h1 class="text-center text-decoration-underline">TECHNICAL SKILLS</h1>
   </div>
-        <p class ="pt-5 fs-4"> Clarice DJOUWOUG NOUSSI is a Front End Developer experienced in Python and JavaScript based programming with a
-          background in Biology. Possess strong skills in HTML, CSS, JavaScript, DOM and Python that could be an advantage in ITcompanies specialized in biological tools. My qualities are determination, creativity, continuous learner, resilience, good
-          team worker</p>
-          <img src="languages.png" class="card-img" alt="school"width="400px" height="400px">
+  <div style="font-size:23px;">
+      <ol style="columns:600px" >
+        <li>Development of new drugs using medicinal plants, achievement of in vivo and in vitro experiments for antimicrobial agents and non-infectious diseases</li>
+        <li>Determination of biological markers, perform histopathological analysis; lab animal feeding, LC-MS analysis</li>
+        <li>Programming using Python, JavaScript, HTML, CSS </li>
+        <li>Server Side: Flask, Django</li>
+        <li>Environments: PyCharm Pro, Visual Studio Code</li>
+        <li>Database: PostGres, SQLite</li>
+        <li>Proficiency in Windows, Linux, Microsoft word, excel, PowerPoint, Internet Explorer ,mozilla firefox</li>
+        <li>Proficiency with bibliography management softwares such as Endnote, Mendeley</li>
+        <li>Proficiency with statistical softwares such as GraphPad Prism, R</li>
+      </ol>
+      </div>
     </div>
     </div>
   </section>
@@ -213,7 +220,11 @@
   </section>
 
   <!--form and icons-->
-  <form id='contact' action='mailto:clarice.djouwoug@gmail.com'>
+  <form id='contact' action='mailto:clarice.djouwoug@gmail.com'
+    method="POST"
+    enctype="multipart/form-data"
+
+    name="EmailForm">
     <div class="content">
     
       <div class="container">
